Use vmin font sizes instead of vw to fix text overlap. Reduce text size of long figures

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -18,6 +18,7 @@ body {
   background: $grey-2;
   height: 100%;
   overflow: hidden;
+  font-size: 4.5vmin;
 }
 
 #fs {
@@ -45,7 +46,7 @@ body {
   cursor: pointer;
   padding: 0;
   margin: 0;
-  font-size: 1.5vw;
+  font-size: 2.75vmin;
   color: $white;
   text-decoration: underline;
 }
